--- a/src/colorlib-regform-1/signup.html
+++ b/src/colorlib-regform-1/signup.html
@@ -34,7 +34,7 @@
             <div class="card-heading"></div>
             <div class="card-body">
                 <h2 class="title">Registration Info</h2>
-                <form method="POST" action="">
+                <form method="POST" action="../enroll.php">
                     <div class="row row-space">
                         <div class="col-2">
                             <div class="input-group">
