--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h2>Campus Shuttle</h2>
         <h3>Made Easy</h3>
         <p>Tired of waiting for the bus? So are we, sign in below and get access to the most up-to-date info on your shuttle. </p>
-        <a href="src/Login_v2/login.html">Sign In</a>
+        <a href="src/login.html">Sign In</a>
     </div>
     <ul class="social">
         <li><a href="#"><img src="https://i.ibb.co/x7P24fL/facebook.png"></a></li>
