--- a/src/signup.html
+++ b/src/signup.html
@@ -13,18 +13,18 @@
     <title>Au Register Forms by Colorlib</title>
 
     <!-- Icons font CSS-->
-    <link href="vendor/mdi-font/css/material-design-iconic-font.min.css" rel="stylesheet" media="all">
-    <link href="vendor/font-awesome-4.7/css/font-awesome.min.css" rel="stylesheet" media="all">
+    <link href="colorlib-regform-1/vendor/mdi-font/css/material-design-iconic-font.min.css" rel="stylesheet" media="all">
+    <link href="colorlib-regform-1/vendor/font-awesome-4.7/css/font-awesome.min.css" rel="stylesheet" media="all">
     <!-- Font special for pages-->
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i"
           rel="stylesheet">
 
     <!-- Vendor CSS-->
-    <link href="vendor/select2/select2.min.css" rel="stylesheet" media="all">
-    <link href="vendor/datepicker/daterangepicker.css" rel="stylesheet" media="all">
+    <link href="colorlib-regform-1/vendor/select2/select2.min.css" rel="stylesheet" media="all">
+    <link href="colorlib-regform-1/vendor/datepicker/daterangepicker.css" rel="stylesheet" media="all">
 
     <!-- Main CSS-->
-    <link href="css/main.css" rel="stylesheet" media="all">
+    <link href="colorlib-regform-1/css/main.css" rel="stylesheet" media="all">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
             <div class="card-heading"></div>
             <div class="card-body">
                 <h2 class="title">Registration Info</h2>
-                <form method="POST" action="../enroll.php">
+                <form method="POST" action="enroll.php">
                     <div class="row row-space">
                         <div class="col-2">
                             <div class="input-group">
@@ -92,14 +92,14 @@
 </div>
 
 <!-- Jquery JS-->
-<script src="vendor/jquery/jquery.min.js"></script>
+<script src="colorlib-regform-1/vendor/jquery/jquery.min.js"></script>
 <!-- Vendor JS-->
-<script src="vendor/select2/select2.min.js"></script>
-<script src="vendor/datepicker/moment.min.js"></script>
-<script src="vendor/datepicker/daterangepicker.js"></script>
+<script src="colorlib-regform-1/vendor/select2/select2.min.js"></script>
+<script src="colorlib-regform-1/vendor/datepicker/moment.min.js"></script>
+<script src="colorlib-regform-1/vendor/datepicker/daterangepicker.js"></script>
 
 <!-- Main JS-->
-<script src="js/global.js"></script>
+<script src="colorlib-regform-1/js/global.js"></script>
 
 </body><!-- This templates was made by Colorlib (https://colorlib.com) -->
 
