--- a/src/signup.html
+++ b/src/signup.html
@@ -64,7 +64,7 @@
                         <div class="col-2">
                             <div class="input-group">
                                 <input class="input--style-1" type="tel" placeholder="PHONE NUMBER"
-                                       name="birthday">
+                                       name="number">
                                 <!--                                <i class="zmdi zmdi-calendar-note input-icon js-btn-calendar"></i>-->
                             </div>
                         </div>
