--- a/src/driver.html
+++ b/src/driver.html
@@ -44,18 +44,11 @@
                             <div class="modal-body">
                                 <div class="input-group">
                                     <div class="input-group mb-3">
-                                        <div class="input-group-prepend">
-                                          <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Alert Type</button>
-                                          <div class="dropdown-menu">
-                                            <a class="dropdown-item" href="#">Action</a>
-                                            <a class="dropdown-item" href="#">Another action</a>
-                                            <a class="dropdown-item" href="#">Something else here</a>
-                                            <div role="separator" class="dropdown-divider"></div>
-                                            <a class="dropdown-item" href="#">Separated link</a>
-                                          </div>
-                                        </div>
-                                        <input type="text" class="form-control" aria-label="Text input with dropdown button">
+                                      <div class="input-group-prepend">
+                                        <span class="input-group-text">Alert Title</span>
                                       </div>
+                                      <input type="form-control" class="form-control" aria-label="Text input">
+                                    </div>
 
                                     <div class="input-group-prepend">
                                       <span class="input-group-text">Alert Text</span>
