--- a/src/signup.html
+++ b/src/signup.html
@@ -75,6 +75,7 @@
                                         <option disabled="disabled" selected="selected">ACCOUNT</option>
                                         <option>Student</option>
                                         <option>Driver</option>
+                                        <option>Admin</option>
                                         <!--                                        <option>Other</option>-->
                                     </select>
                                     <div class="select-dropdown"></div>
