--- a/src/Admin.html
+++ b/src/Admin.html
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link href="C:\Users\User\OneDrive\Documents\MSU-Shuttle-main\MSU-Shuttle-main\media\msu.png" rel="stylesheet">
     <link href="C:\Users\User\OneDrive\Documents\MSU-Shuttle-main\MSU-Shuttle-main\CSS\driver.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
     <nav class="navbar navbar-dark sticky-top color-msu">
         <div class="container-fluid">
-          <a class="navbar-brand display-1 header-text" href="#"><img id="logo" src="C:\Users\User\OneDrive\Documents\MSU-Shuttle-main\MSU-Shuttle-main\media\msu.png" alt="MSU Logo">Admin Home</a>
+          <a class="navbar-brand display-1 header-text" href="#"><img id="logo" src="../media/msu.png" alt="MSU Logo">Admin Home</a>
           <div class="navbar-nav">
             <a class="nav-item nav-link" href="#">Logout</a>
           </div>       
