--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>MSU Shuttle</title>
     <link rel="stylesheet" href="CSS/index.css">
+    <link rel="shortcut icon" href="media/favicon.ico" type="image/x-icon">
 </head>
 <body>
 <!--in-->
