--- a/src/login.html
+++ b/src/login.html
@@ -26,6 +26,7 @@
 	<link rel="stylesheet" type="text/css" href="Login_v2/css/util.css">
 	<link rel="stylesheet" type="text/css" href="Login_v2/css/main.css">
 <!--===============================================================================================-->
+	<link rel="shortcut icon" href="/media/favicon.ico" type="image/x-icon">
 </head>
 <body>
 
