--- a/src/map.html
+++ b/src/map.html
@@ -25,6 +25,7 @@
           color: #666666;
         }
     </style>
+        <link rel="shortcut icon" href="/media/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <strong>Montclair State University Map</strong>
