--- a/src/passengerHome.html
+++ b/src/passengerHome.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3pro.css">
 <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-light-blue.css">
-
+<link rel="shortcut icon" href="/media/favicon.ico" type="image/x-icon">
 <body style="max-width:600px">
 
     <nav class="w3-sidebar w3-bar-block w3-card" id="mySidebar">
