--- a/src/signup.html
+++ b/src/signup.html
@@ -25,6 +25,7 @@
 
     <!-- Main CSS-->
     <link href="colorlib-regform-1/css/main.css" rel="stylesheet" media="all">
+    <link rel="shortcut icon" href="/media/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
