--- a/src/student.html
+++ b/src/student.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3pro.css">
 <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-red.css">
 <link href="../CSS/student.css" rel="stylesheet" type="text/css" />
+<link rel="shortcut icon" href="/media/favicon.ico" type="image/x-icon">
 
 <body>
 <nav class="w3-sidebar w3-bar-block w3-card" id="mySidebar">
