--- a/src/Admin.html
+++ b/src/Admin.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link href="C:\Users\User\OneDrive\Documents\MSU-Shuttle-main\MSU-Shuttle-main\CSS\driver.css" rel="stylesheet" type="text/css"/>
+    <link rel="shortcut icon" href="/media/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <nav class="navbar navbar-dark sticky-top color-msu">
