--- a/src/driver_login.html
+++ b/src/driver_login.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css" rel="stylesheet">
     <link href="../CSS/driver.css" rel="stylesheet" type="text/css"/>
+      <link rel="shortcut icon" href="/media/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <body>
