--- a/src/driver.html
+++ b/src/driver.html
@@ -7,13 +7,12 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css" rel="stylesheet">
-    <link href="C:\Users\taega\Dropbox\My PC (DESKTOP-3D3JLJC)\Downloads\taegan-main\taegan-main\CSS\driver.css" rel="stylesheet" type="text/css"/>
-    <link rel="shortcut icon" href="/media/favicon.ico" type="image/x-icon">
+    <link href="..\CSS\driver.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
     <nav class="navbar navbar-dark sticky-top color-msu">
         <div class="container-fluid">
-          <a class="navbar-brand display-1 header-text" href="#"><img id="logo" src="C:\Users\taega\Dropbox\My PC (DESKTOP-3D3JLJC)\Downloads\taegan-main\taegan-main\media\msu.png" alt="MSU Logo">Driver Home</a>
+          <a class="navbar-brand display-1 header-text" href="#"><img id="logo" src="..\media\msu.png" alt="MSU Logo">Driver Home</a>
           <div class="navbar-nav">
             <a class="nav-item nav-link" href="#">Logout</a>
           </div>       
@@ -37,33 +36,30 @@
                     
                     <!-- Modal -->
                     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel">New Alert</h5>
-                            </div>
-                            <div class="modal-body">
-                                <div class="input-group">
-                                    <div class="input-group mb-3">
-                                      <div class="input-group-prepend">
-                                        <span class="input-group-text">Alert Title</span>
+                      <div class="modal-dialog">
+                      <div class="modal-content">
+                          <div class="modal-header">
+                              <h5 class="modal-title" id="exampleModalLabel">New Alert</h5>
+                          </div>
+                          <form action="submit_alert.php" method="POST">
+                              <div class="modal-body">
+                                      <div class="mb-3">
+                                              <label for="alertTitle" class="form-label">Alert Title</label>
+                                              <input type="text" class="form-control" id="alertTitle" name="alertTitle">
                                       </div>
-                                      <input type="form-control" class="form-control" aria-label="Text input">
-                                    </div>
-
-                                    <div class="input-group-prepend">
-                                      <span class="input-group-text">Alert Text</span>
-                                    </div>
-                                    <textarea class="form-control" aria-label="With textarea"></textarea>
-                                </div>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                                <button type="button" class="btn btn-color-msu" data-bs-dismiss="modal">Send Alert</button>
-                            </div>
-                        </div>
-                        </div>
-                    </div>
+                              <div class="mb-3">
+                                      <label for="alertDetails" class="form-label">Alert Details</label>
+                                      <textarea class="form-control" id="alertDetails" name="alertDetails"></textarea>
+                              </div>
+                              </div>
+                                      <div class="modal-footer">
+                                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                                      <button type="submit" class="btn btn-primary">Save changes</button>
+                              </div>
+                      </form>
+                      </div>
+                      </div>
+                  </div>
 
 
                 </div>
