--- a/src/driver_login.html
+++ b/src/driver_login.html
@@ -13,7 +13,7 @@
     <body>
         <nav class="navbar navbar-dark sticky-top color-msu">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img id="logo" src="C:\Users\taega\Dropbox\My PC (DESKTOP-3D3JLJC)\Downloads\taegan-main\taegan-main\media\msu.png" alt="MSU Logo"></a>
+            <a class="navbar-brand" href="#"><img id="logo" src="..\media\msu.png" alt="MSU Logo"></a>
             <span class="navbar-brand mb-0 h1 header-text display-1 text-left">Select Bus and Route</span>            
           </div>
         </nav>
