--- a/src/driver.html
+++ b/src/driver.html
@@ -7,13 +7,13 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css" rel="stylesheet">
-    <link href="C:\Users\taega\Dropbox\My PC (DESKTOP-3D3JLJC)\Downloads\taegan-main\taegan-main\CSS\driver.css" rel="stylesheet" type="text/css"/>
+    <link href="..\CSS\driver.css" rel="stylesheet" type="text/css"/>
     <link rel="shortcut icon" href="/media/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <nav class="navbar navbar-dark sticky-top color-msu">
         <div class="container-fluid">
-          <a class="navbar-brand display-1 header-text" href="#"><img id="logo" src="C:\Users\taega\Dropbox\My PC (DESKTOP-3D3JLJC)\Downloads\taegan-main\taegan-main\media\msu.png" alt="MSU Logo">Driver Home</a>
+          <a class="navbar-brand display-1 header-text" href="#"><img id="logo" src="..\media\msu.png" alt="MSU Logo">Driver Home</a>
           <div class="navbar-nav">
             <a class="nav-item nav-link" href="#">Logout</a>
           </div>       
