--- a/src/student.html
+++ b/src/student.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Student Home</title>
+    <title>StudentHome</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -33,37 +33,9 @@
         </div>
         <div class="row">
             <h3><strong>Bus Schedule</strong></h3>
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th scope="col">Bus#</th>
-                        <th scope="col">Current Stop</th>
-                        <th scope="col">Next Stop</th>
-                        <th scope="col">Wait Time</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>University Hall</td>
-                        <td>Lot 60</td>
-                        <td>10 minutes</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>Red Hawk Deck</td>
-                        <td>University Hall</td>
-                        <td>3 minutes</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">3</th>
-                        <td>Lot 60</td>
-                        <td>Hawk Crossings</td>
-                        <td>2 minutes</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+            <div class="table-responsive">
+                <iframe class="table table-bordered table-striped" src="schedule.php"></iframe>
+            </div>
         <div>
             <div class="row">
                 <h3><strong>Announcements</strong></h3>
