--- a/src/driver.html
+++ b/src/driver.html
@@ -41,7 +41,7 @@
                           <div class="modal-header">
                               <h5 class="modal-title" id="exampleModalLabel">New Alert</h5>
                           </div>
-                          <form action="submit_alert.php" method="POST">
+                          <form action="submit_alert.php" method="POST" id="alert-form">
                               <div class="modal-body">
                                       <div class="mb-3">
                                               <label for="alertTitle" class="form-label">Alert Title</label>
@@ -79,5 +79,18 @@
       </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
+    <script>
+      const alertForm = document.getElementById("alert-form");
+      const alertTitleInput = document.getElementById("alertTitle");
+      const alertDetailsInput = document.getElementById("alertDetails");
+    
+      alertForm.addEventListener("submit", (event) => {
+        if (!alertTitleInput.value || !alertDetailsInput.value) {
+          event.preventDefault();
+          alert("Please fill in both fields");
+        }
+      });
+    </script>
 </body>
 </html>
