Added temp alert table to driver, started d_submit

--- a/src/driver_login.html
+++ b/src/driver_login.html
@@ -91,7 +91,7 @@
         <section id="submit">
           <div class="container-fluid ms-auto">
             <div class="row gx-3 px-5 text-wrap align-middle subtitle mb-3">
-                <button type="button" onclick="location.href = 'driver.html';" class="btn btn-color-msu btn-lg btn-block">Submit</button>
+                <button type="button" onclick="location.href = 'driver_submit.php';" class="btn btn-color-msu btn-lg btn-block">Submit</button>
             </div>
           </div>
 
