--- a/src/driver.html
+++ b/src/driver.html
@@ -60,8 +60,42 @@
                       </div>
                       </div>
                   </div>
-
-
+                </div>
+                <div class="row subtitle">
+                  <!--View Alert Section-->
+                  <div class="col-2"></div>
+                  <div class="col-8">
+                    <table class="table table-striped table-hover">
+                      <thead>
+                        <tr>
+                          <th scope="col">Bus#</th>
+                          <th scope="col">Title</th>
+                          <th scope="col">Details</th>
+                          <th scope="col">Date/Time</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <th scope="row">1</th>
+                          <td>test</td>
+                          <td>Otto</td>
+                          <td>@mdo</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">2</th>
+                          <td>Jacob</td>
+                          <td>Thornton</td>
+                          <td>@fat</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">3</th>
+                          <td colspan="2">Larry the Bird</td>
+                          <td>@twitter</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                  <div class="col-2"></div>
                 </div>
             </div>
         </div>
@@ -69,7 +103,7 @@
 
       <!-- Footer section -->
       <section id="footer-section">
-        <div class="container text-center fixed-bottom">
+        <div class="container text-center stick-footer">
           <div class="row">
             <div class="col-12">
               <p class="align-middle">&copy Montclair State University 2023</p>
