--- a/src/Admin.html
+++ b/src/Admin.html
@@ -26,7 +26,8 @@
                 <div class="col-md-6 col-sm-12 g-2 text-center">
                     <h5 id="current-title" class="display-6 text-left stop-text-size pb-2 subtitle">Current Stop: [STOP]</h5>
                     <h5 id="next-title" class="display-6 text-left stop-text-size pb-2">Next Stop: [STOP]</h5>
-                    <button id="stop-button" type="button" class="btn btn-color-msu-scaling active col-6 mt-3" data-bs-toggle="button">Arrived at Stop</button> 
+                    <button id="stop-button" type="button" class="btn btn-color-msu-scaling active col-6 mt-3" data-bs-toggle="button">Arrived at Stop</button>
+                    <button id="accounts-button" type="button" class="btn btn-color-msu-scaling active col-6 mt-3" data-bs-toggle="button">View Accounts</button>
                 </div>
                 <div class="col-md-6 col-sm-12 g-2 text-center">
                     <!-- Button trigger modal -->
